--- a/src/index.css
+++ b/src/index.css
@@ -213,13 +213,6 @@ h6 {
   justify-content: center;
   margin: auto;
 }
-.custom-calendar {
-  background-color: #ffffff;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  padding: 20px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
 
 .custom-calendar .rdp-caption {
   display: flex;
